--- a/mall-auth/src/main/resources/bootstrap-prod.yml
+++ b/mall-auth/src/main/resources/bootstrap-prod.yml
@@ -2,9 +2,9 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: http://nacos-registry:8848
+        server-addr: http://114.132.217.95:8848
       config:
-        server-addr: http://nacos-registry:8848
+        server-addr: http://114.132.217.95:8848
         file-extension: yaml
 logging:
   level:
