--- a/mall-demo/src/main/resources/application.yml
+++ b/mall-demo/src/main/resources/application.yml
@@ -2,9 +2,9 @@ server:
   port: 8082
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://114.132.217.95:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: mysql_lee
 mybatis:
   mapper-locations:
     - classpath:mapper/*.xml
