--- a/mall-monitor/src/main/resources/application-prod.yml
+++ b/mall-monitor/src/main/resources/application-prod.yml
@@ -2,4 +2,4 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: http://nacos-registry:8848
+        server-addr: http://114.132.217.95:8848
