--- a/mall-portal/src/main/resources/application.yml
+++ b/mall-portal/src/main/resources/application.yml
@@ -2,9 +2,9 @@ server:
   port: 8085
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://114.132.217.95:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: mysql_lee
     druid:
       initial-size: 5 #连接池初始化大小
       min-idle: 10 #最小空闲连接数
@@ -16,21 +16,21 @@ spring:
         login-password: druid
   data:
     mongodb:
-      host: localhost
+      host: 114.132.217.95
       port: 27017
       database: mall-port
   redis:
-    host: localhost # Redis服务器地址
+    host: 114.132.217.95 # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
-    password:  # Redis服务器连接密码（默认为空）
+    password: redis_lee # Redis服务器连接密码（默认为空）
     timeout: 3000ms # 连接超时时间（毫秒）
   rabbitmq:
-    host: localhost
+    host: 114.132.217.95
     port: 5672
-    virtual-host: /mall
-    username: mall
-    password: mall
+    virtual-host: /
+    username: guest
+    password: guest
 mybatis:
   mapper-locations:
     - classpath:dao/*.xml
