--- a/mall-search/src/main/resources/application.yml
+++ b/mall-search/src/main/resources/application.yml
@@ -2,9 +2,9 @@ server:
   port: 8081
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://114.132.217.95:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: mysql_lee
     druid:
       initial-size: 5 #连接池初始化大小
       min-idle: 10 #最小空闲连接数
@@ -20,7 +20,7 @@ spring:
         enabled: true
   elasticsearch:
     rest:
-      uris: 127.0.0.1:9200
+      uris: 114.132.217.95:9200
 mybatis:
   mapper-locations:
     - classpath:dao/*.xml
