--- a/mall-search/src/main/resources/bootstrap-dev.yml
+++ b/mall-search/src/main/resources/bootstrap-dev.yml
@@ -2,7 +2,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: http://localhost:8848
+        server-addr: http://114.132.217.95:8848
       config:
-        server-addr: http://localhost:8848
+        server-addr: http://114.132.217.95:8848
         file-extension: yaml
